adjust swagger config
